--- a/src/renderer/styles/components.css
+++ b/src/renderer/styles/components.css
@@ -15,14 +15,14 @@
 }
 
 #sidebar {
-  height: calc(100vh - 44px);
+  height: 100vh;
   background-color: #81b1eb;
   padding: 1em 2%;
   flex: 2;
 }
 
 #main-window {
-  height: calc(100vh - 44px);
+  height: 100vh;
   background-color: #ffffff;
   flex: 7;
   padding: 2em 5%;
