--- a/src/renderer/styles/components.css
+++ b/src/renderer/styles/components.css
@@ -29,3 +29,12 @@
   overflow-y: scroll;
   overflow-x: hidden;
 }
+
+.vega-bindings {
+  display: flex;
+  margin-top: -5px;
+}
+
+.vega-bind {
+  margin-right: 40px;
+}
